# easyopcda

./: CMakeLists.txt  README.md
include/easyopcda/: easyopcda.h  opcClient.h  opcGroup.h  opcInit.h  opcclient.h  opcerror.h  opcgroup.h  opcinit.h  utility.h
src/: example.cpp  opcClient.cpp  opcGroup.cpp  opcInit.cpp  opcclient.cpp  opcgroup.cpp  opcinit.cpp
